syntax = "proto3";
option go_package = "./";

package GRPC_Protocol;

service CourseMethods {
    rpc postCourse(PostCourseRequest) returns (PostCourseReply) {}
    rpc getCourseByID(GetCourseByIDRequest) returns (GetCourseByIDReply) {}
    rpc getCourses(GetCourseListRequest) returns (GetCourseListReply) {}
    rpc deleteCourseByID(DeleteCourseByIDRequest) returns (DeleteCourseByIDReply) {}
}

message Course{
    string ID = 1;
    float StudentRating = 2;
    string Name = 3;
    string Teacher = 4;
    float ECTS = 5;
}

message PostCourseRequest{
    string ID = 1;
    float StudentRating = 2;
    string Name = 3;
    string Teacher = 4;
    float ECTS = 5;
}

message PostCourseReply{
    string message = 1;
}

message GetCourseByIDRequest{
    string ID = 1;
}

message GetCourseByIDReply{
    string ID = 1;
    float StudentRating = 2;
    string Name = 3;
    string Teacher = 4;
    float ECTS = 5;
}

message GetCourseListRequest{
    string message = 1;
}

message GetCourseListReply{
    repeated Course course = 1;
}

message DeleteCourseByIDRequest{
    string ID = 1;
}

message DeleteCourseByIDReply{
    string message = 1;
}